<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="3dp">

    <LinearLayout
        android:id="@+id/itemUserReservationLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemUserReservationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_user_name" />

        <TextView
            android:id="@+id/itemUserReservationShopName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/str_shop_name" />

        <TextView
            android:id="@+id/itemUserReservationDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_reservation_detail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemUserReservationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_date" />

            <TextView
                android:id="@+id/itemUserReservationTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_time" />

            <TextView
                android:id="@+id/itemUserReservationPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_place_holder_price" />

        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>