<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="3dp">

    <LinearLayout
        android:id="@+id/itemServiceLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <ImageView
            android:id="@+id/itemServiceImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemServiceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:text="@string/str_name"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/itemServiceDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:textColor="@color/primary"
                android:text="@string/str_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/primary"
                        android:text="@string/str_symbol_peso" />

                    <TextView
                        android:id="@+id/itemServicePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/primary"
                        android:text="@string/str_price" />

                </LinearLayout>

                <Button
                    android:id="@+id/itemServiceDelete"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom|end"
                    android:text="@string/str_delete"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:background="@drawable/button_primary" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>