<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.fragments.shopinfo.ShopInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primary"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleAddShop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/str_shop_info"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:text="@string/str_shop_details"
                android:textSize="20sp"
                android:textColor="@color/primary"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/image1ShopInfo"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add_image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image2ShopInfo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_add_image" />

                <ImageView
                    android:id="@+id/image3ShopInfo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_add_image" />

            </LinearLayout>

            <EditText
                android:id="@+id/nameShopInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/inputfield_primary"
                android:ems="10"
                android:hint="@string/str_shop_name"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/descriptionShopInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/inputfield_primary"
                android:ems="10"
                android:hint="@string/str_description"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/addressShopInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/inputfield_primary"
                android:ems="10"
                android:hint="@string/str_address"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/openHoursShopInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/inputfield_primary"
                android:ems="10"
                android:hint="@string/str_open_hours"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/priceRangeShopInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/inputfield_primary"
                android:ems="10"
                android:hint="@string/str_price_range"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:text="@string/str_services"
                android:textSize="20sp"
                android:textColor="@color/primary"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/serviceListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                tools:listitem="@layout/list_item_service_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveShopInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/str_save"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:background="@drawable/button_primary" />

                <Button
                    android:id="@+id/backShopInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/str_cancel"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:background="@drawable/button_primary" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>