<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.useraccountinfo.UserAccountInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profileImageUserAccountInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_account_circle_100" />

        <TextView
            android:id="@+id/nameUserAccountInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:text="@string/str_user_name" />

        <TextView
            android:id="@+id/uuidUserAccountInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/primary"
            android:text="@string/str_uuid" />

        <TextView
            android:id="@+id/emailUserAccountInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/primary"
            android:text="@string/str_email" />

    </LinearLayout>

</LinearLayout>